Add SEO meta tags, favicon, Open Graph, and Twitter Cards

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,36 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Nova Nexus — Contacto</title>
+  <title>Contacto — Nova Nexus | Agenda una Consulta</title>
+  <meta name="description" content="Agenda una conversación sin compromiso con Nova Nexus. Descubre cómo podemos conectar tu industria con la mejor tecnología global.">
+  <meta name="author" content="Nova Nexus">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#0F112A">
+  <link rel="canonical" href="https://nova-nexus-displace-agencys-projects.vercel.app/contact.html">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Nova Nexus">
+  <meta property="og:title" content="Contacto — Nova Nexus | Agenda una Consulta">
+  <meta property="og:description" content="Agenda una conversación sin compromiso con Nova Nexus. Descubre cómo podemos conectar tu industria con la mejor tecnología global.">
+  <meta property="og:url" content="https://nova-nexus-displace-agencys-projects.vercel.app/contact.html">
+  <meta property="og:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta property="og:image:width" content="1034">
+  <meta property="og:image:height" content="858">
+  <meta property="og:locale" content="es_CL">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Contacto — Nova Nexus | Agenda una Consulta">
+  <meta name="twitter:description" content="Agenda una conversación sin compromiso. Descubre cómo conectar tu industria con la mejor tecnología global.">
+  <meta name="twitter:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500;600;700&family=Inter:wght@400;500&family=Roboto+Mono:wght@400&display=swap" rel="stylesheet">
