--- a/index.html
+++ b/index.html
@@ -4,6 +4,36 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Nova Nexus — Tech Global de Manera Cercana</title>
+  <meta name="description" content="Conectamos industrias estratégicas de Latinoamérica con la mejor tecnología del mundo. Consultoría tech con acompañamiento cercano, desde evaluación hasta implementación.">
+  <meta name="keywords" content="consultoría tecnológica, tecnología Latinoamérica, fraud detection, fintech, compliance, transformación digital, Oscilar">
+  <meta name="author" content="Nova Nexus">
+  <meta name="robots" content="index, follow">
+  <meta name="theme-color" content="#2B40F5">
+  <link rel="canonical" href="https://nova-nexus-displace-agencys-projects.vercel.app/">
+
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:site_name" content="Nova Nexus">
+  <meta property="og:title" content="Nova Nexus — Tech Global de Manera Cercana">
+  <meta property="og:description" content="Conectamos industrias estratégicas de Latinoamérica con la mejor tecnología del mundo. Consultoría tech con acompañamiento cercano.">
+  <meta property="og:url" content="https://nova-nexus-displace-agencys-projects.vercel.app/">
+  <meta property="og:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta property="og:image:width" content="1034">
+  <meta property="og:image:height" content="858">
+  <meta property="og:locale" content="es_CL">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Nova Nexus — Tech Global de Manera Cercana">
+  <meta name="twitter:description" content="Conectamos industrias estratégicas de Latinoamérica con la mejor tecnología del mundo.">
+  <meta name="twitter:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500;600;700&family=Inter:wght@400;500&family=Roboto+Mono:wght@400&display=swap" rel="stylesheet">
