Add subtle page transition animation between pages

--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,7 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+  <div class="page-transition" aria-hidden="true"></div>
 
   <nova-navbar></nova-navbar>
 
@@ -52,7 +53,7 @@
       </div>
       <div class="contact-hero__bottom">
         <div class="contact-hero__content">
-          <p class="contact-hero__subtitle">Estamos aquí para ayudarte. Agenda una conversación, envíanos un mensaje, o llámanos directamente.<br><br>Sin compromiso, sin presión.</p>
+          <p class="contact-hero__subtitle">Estamos aquí para ayudarte. Agenda una conversación o envíanos un mensaje.<br><br>Sin compromiso, sin presión.</p>
           <div class="contact-hero__buttons">
             <nova-btn variant="white-blue">Agenda una Consulta</nova-btn>
           </div>
@@ -140,10 +141,10 @@
   <section class="cta">
     <div class="cta__inner">
       <div style="width:100%;">
-        <h2 class="h2 h2--center" style="color:var(--lavender);">¿Listo para transformar tu industria?</h2>
+        <h2 class="h2 h2--center" style="color:var(--lavender);">¿Listo para modernizar tu operación?</h2>
       </div>
       <div class="cta__block">
-        <p class="cta__subtitle">30 minutos. Sin compromiso. Descubre cómo podemos ayudarte.</p>
+        <p class="cta__subtitle">30 minutos. Sin compromiso. Conversemos sobre cómo podemos ayudarte.</p>
         <div class="cta__buttons">
           <nova-btn variant="cta-white">Agendar Demo</nova-btn>
           <nova-btn variant="dark">Enviar Consulta</nova-btn>
