Add legal pages (privacy policy + terms of service) and update site links
- Create privacy.html with Chilean data protection law compliance
- Create terms.html with Chilean jurisdiction and IP clauses
- Update footer links from # to actual legal pages
- Add legal page CSS (hero, content body, responsive)
- Add footer copyright link styles
- Wire CTA and hero buttons with proper href targets
- Replace placeholder community images with RiskCon photos

--- a/contact.html
+++ b/contact.html
@@ -55,7 +55,7 @@
         <div class="contact-hero__content">
           <p class="contact-hero__subtitle">Estamos aquí para ayudarte. Agenda una conversación o envíanos un mensaje.<br><br>Sin compromiso, sin presión.</p>
           <div class="contact-hero__buttons">
-            <nova-btn variant="white-blue">Agenda una Consulta</nova-btn>
+            <nova-btn variant="white-blue" href="#formulario">Agenda una Consulta</nova-btn>
           </div>
         </div>
         <div class="contact-hero__visual">
@@ -68,7 +68,7 @@
   <!-- ════════════════════════════════════════════
        CONTACT FORM
        ════════════════════════════════════════════ -->
-  <section class="contact-form-section">
+  <section id="formulario" class="contact-form-section">
     <div class="contact-form-section__inner">
       <div class="contact-form-section__title">
         <nova-tag variant="blue">CONTácta con nosotros</nova-tag>
@@ -146,13 +146,13 @@
       <div class="cta__block">
         <p class="cta__subtitle">30 minutos. Sin compromiso. Conversemos sobre cómo podemos ayudarte.</p>
         <div class="cta__buttons">
-          <nova-btn variant="cta-white">Agendar Demo</nova-btn>
-          <nova-btn variant="dark">Enviar Consulta</nova-btn>
+          <nova-btn variant="cta-white" href="#formulario">Agendar Demo</nova-btn>
+          <nova-btn variant="dark" href="#formulario">Enviar Consulta</nova-btn>
         </div>
       </div>
       <div class="cta__partner">
         <p class="cta__subtitle">¿Eres un proveedor de tecnología y quieres expandir tu alcance?</p>
-        <nova-btn variant="link">Conviértete en Partner</nova-btn>
+        <nova-btn variant="link" href="#formulario">Conviértete en Partner</nova-btn>
       </div>
     </div>
   </section>
