--- a/index.html
+++ b/index.html
@@ -58,8 +58,8 @@
             <p class="hero__subtitle">Impulsamos la modernización de industrias estratégicas conectándolas con soluciones tecnológicas probadas globalmente.</p>
           </div>
           <div class="hero__buttons">
-            <nova-btn variant="primary">Agenda una Consulta</nova-btn>
-            <nova-btn variant="white">Conoce Nuestras Soluciones</nova-btn>
+            <nova-btn variant="primary" href="contact.html">Agenda una Consulta</nova-btn>
+            <nova-btn variant="white" href="#valor">Conoce Más</nova-btn>
           </div>
         </div>
         <div class="hero__visual">
@@ -156,7 +156,7 @@
   <!-- ════════════════════════════════════════════
        SERVICES (Value Prop)
        ════════════════════════════════════════════ -->
-  <section class="services">
+  <section id="valor" class="services">
     <div class="services__inner">
       <div>
         <nova-tag center>Propuesta de Valor</nova-tag>
@@ -209,7 +209,7 @@
   <!-- ════════════════════════════════════════════
        APPROACH (Solutions / Oscilar Case)
        ════════════════════════════════════════════ -->
-  <section class="approach">
+  <section id="soluciones" class="approach">
     <div class="approach__inner">
       <div>
         <nova-tag center>SOLUCIONES</nova-tag>
@@ -286,7 +286,7 @@
   <!-- ════════════════════════════════════════════
        PROCESS
        ════════════════════════════════════════════ -->
-  <section class="process">
+  <section id="proceso" class="process">
     <div class="process__inner">
       <nova-tag>¿CÓMO FUNCIONA?</nova-tag>
       <div class="process__content">
@@ -432,7 +432,7 @@
       </div>
       <div class="community__row">
         <div class="community__card">
-          <div class="community__card-img" style="background-image:url(images/Content_310x360.png);">
+          <div class="community__card-img" style="background-image:url(images/riskcon-group.jpg);">
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
@@ -445,7 +445,7 @@
           </div>
         </div>
         <div class="community__card">
-          <div class="community__card-img" style="background-image:url(images/Content_310x360_1.png);">
+          <div class="community__card-img" style="background-image:url(images/riskcon-presentation.jpg);">
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
@@ -458,7 +458,7 @@
           </div>
         </div>
         <div class="community__card">
-          <div class="community__card-img" style="background-image:url(images/Content_310x360_2.png);">
+          <div class="community__card-img" style="background-image:url(images/riskcon-networking.jpg);">
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
@@ -471,7 +471,7 @@
           </div>
         </div>
         <div class="community__card">
-          <div class="community__card-img" style="background-image:url(images/Content_310x360_3.png);">
+          <div class="community__card-img" style="background-image:url(images/riskcon-conversation.jpg);">
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
@@ -510,7 +510,7 @@
   <!-- ════════════════════════════════════════════
        CTA
        ════════════════════════════════════════════ -->
-  <section class="cta">
+  <section id="contacto" class="cta">
     <div class="cta__inner">
       <div style="width:100%;">
         <h2 class="h2 h2--center" style="color:var(--lavender);">¿Listo para modernizar tu operación?</h2>
@@ -518,13 +518,13 @@
       <div class="cta__block">
         <p class="cta__subtitle">30 minutos. Sin compromiso. Conversemos sobre cómo podemos ayudarte.</p>
         <div class="cta__buttons">
-          <nova-btn variant="cta-white">Agendar Demo</nova-btn>
-          <nova-btn variant="dark">Enviar Consulta</nova-btn>
+          <nova-btn variant="cta-white" href="contact.html">Agendar Demo</nova-btn>
+          <nova-btn variant="dark" href="contact.html">Enviar Consulta</nova-btn>
         </div>
       </div>
       <div class="cta__partner">
         <p class="cta__subtitle">¿Eres un proveedor de tecnología y quieres expandir tu alcance?</p>
-        <nova-btn variant="link">Conviértete en Partner</nova-btn>
+        <nova-btn variant="link" href="contact.html">Conviértete en Partner</nova-btn>
       </div>
     </div>
   </section>
