Fix hero text clipping, replace mock logos, fix Oscilar card, drag-scroll process
- Fix hero heading line-height from fixed px to 1.05 to prevent descender clipping
- Add padding-bottom to word-wrap spans for GSAP animation descender room
- Replace mock tech stack logos with RiskCon, FinteChile, Finnovista SVGs
- Fix Oscilar button text clipping (btn--light now width:auto)
- Link Oscilar button to oscilar.com (opens in new tab)
- Change approach image from object-fit:cover to contain
- Replace auto-scrolling process marquee with drag-to-scroll carousel
- External links in NovaBtn now get target=_blank

--- a/index.html
+++ b/index.html
@@ -89,28 +89,28 @@
         <div class="tech-stack__item">
           <div class="tech-stack__item-header">
             <span class="tech-stack__number tech-stack__number--muted">/02</span>
-            <span class="tech-stack__label">FinTech Award</span>
+            <span class="tech-stack__label">RiskCon Latam</span>
           </div>
           <div class="tech-stack__logo tech-stack__logo--muted">
-            <img src="images/Logo_249x48.png" alt="FinTech Award">
+            <img src="images/logo-riskcon.svg" alt="RiskCon Latam">
           </div>
         </div>
         <div class="tech-stack__item">
           <div class="tech-stack__item-header">
             <span class="tech-stack__number tech-stack__number--muted">/03</span>
-            <span class="tech-stack__label">Banking Tech</span>
+            <span class="tech-stack__label">FinteChile</span>
           </div>
           <div class="tech-stack__logo tech-stack__logo--muted">
-            <img src="images/Logo_166x58.png" alt="Banking Tech">
+            <img src="images/logo-fintechile.svg" alt="FinteChile">
           </div>
         </div>
         <div class="tech-stack__item">
           <div class="tech-stack__item-header">
             <span class="tech-stack__number tech-stack__number--muted">/04</span>
-            <span class="tech-stack__label">Premios 2025</span>
+            <span class="tech-stack__label">Finnovista</span>
           </div>
           <div class="tech-stack__logo tech-stack__logo--muted">
-            <img src="images/Logo_166x58_1.png" alt="Premios 2025">
+            <img src="images/logo-finnovista.svg" alt="Finnovista">
           </div>
         </div>
       </div>
@@ -273,7 +273,7 @@
             <p class="approach__impact-text">Contribuimos a un ecosistema financiero más seguro, eficiente y accesible para las personas.</p>
           </div>
           <div style="margin-top:24px;">
-            <nova-btn variant="light">Conocer Más Sobre Oscilar</nova-btn>
+            <nova-btn variant="light" href="https://www.oscilar.com">Conocer Más Sobre Oscilar</nova-btn>
           </div>
         </div>
         <div class="approach__card-right">
