Update footer, RiskCon content, hide tech carousel, fix email
- Hide Follow Us footer column (no social media yet)
- Change Santiago, Chile from link to plain text
- Update email to contact@novanexuscapital.com across all pages
- Update RiskCon community cards with real event content from Jan 2026 presentation
- Each card now has unique text: event overview, presentation, networking, connections
- Hide tech stack logo carousel (not enough real logos yet)

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <!-- ════════════════════════════════════════════
        TECH STACK (Logos)
        ════════════════════════════════════════════ -->
-  <section class="tech-stack">
+  <section class="tech-stack" style="display:none;">
     <div class="tech-stack__inner">
       <div class="tech-stack__fade-left"></div>
       <div class="tech-stack__fade-right"></div>
@@ -436,12 +436,12 @@
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
-              <span class="community__card-badge-text">2025</span>
+              <span class="community__card-badge-text">Enero 2026</span>
             </div>
           </div>
           <div class="community__card-caption">
-            <span class="community__card-tag">RiskCon</span>
-            <p class="community__card-desc">Participamos en eventos clave de la industria para conectar líderes del sector con las soluciones tecnológicas que están definiendo el futuro.</p>
+            <span class="community__card-tag">RiskCon Chile 2026</span>
+            <p class="community__card-desc">Organizamos un cocktail ejecutivo de Crédito, Fraude y Compliance junto a Oscilar y Mastercard en Santiago.</p>
           </div>
         </div>
         <div class="community__card">
@@ -449,12 +449,12 @@
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
-              <span class="community__card-badge-text">2025</span>
+              <span class="community__card-badge-text">Enero 2026</span>
             </div>
           </div>
           <div class="community__card-caption">
-            <span class="community__card-tag">RiskCon</span>
-            <p class="community__card-desc">Participamos en eventos clave de la industria para conectar líderes del sector con las soluciones tecnológicas que están definiendo el futuro.</p>
+            <span class="community__card-tag">Presentación</span>
+            <p class="community__card-desc">Rodrigo Lobo Puccio presentó cómo la IA de Oscilar está transformando la detección de fraude y el compliance en el sector financiero chileno.</p>
           </div>
         </div>
         <div class="community__card">
@@ -462,12 +462,12 @@
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
-              <span class="community__card-badge-text">2025</span>
+              <span class="community__card-badge-text">Enero 2026</span>
             </div>
           </div>
           <div class="community__card-caption">
-            <span class="community__card-tag">RiskCon</span>
-            <p class="community__card-desc">Participamos en eventos clave de la industria para conectar líderes del sector con las soluciones tecnológicas que están definiendo el futuro.</p>
+            <span class="community__card-tag">Networking</span>
+            <p class="community__card-desc">Líderes del sector financiero, ejecutivos de Mastercard y el equipo de Oscilar compartieron visiones sobre el futuro de la gestión de riesgo.</p>
           </div>
         </div>
         <div class="community__card">
@@ -475,12 +475,12 @@
             <div class="community__card-img-gradient"></div>
             <div class="community__card-badge">
               <div class="community__card-badge-dot"></div>
-              <span class="community__card-badge-text">2025</span>
+              <span class="community__card-badge-text">Enero 2026</span>
             </div>
           </div>
           <div class="community__card-caption">
-            <span class="community__card-tag">RiskCon</span>
-            <p class="community__card-desc">Participamos en eventos clave de la industria para conectar líderes del sector con las soluciones tecnológicas que están definiendo el futuro.</p>
+            <span class="community__card-tag">Conexiones</span>
+            <p class="community__card-desc">Soporte en español, mismo huso horario y expertise local: conectamos tecnología de clase mundial con las necesidades del mercado chileno.</p>
           </div>
         </div>
       </div>
