--- a/privacy.html
+++ b/privacy.html
@@ -116,7 +116,7 @@
         <li><strong>Oposición:</strong> oponerte al tratamiento de tus datos en determinadas circunstancias.</li>
         <li><strong>Portabilidad:</strong> solicitar la entrega de tus datos en un formato estructurado y de uso común.</li>
       </ul>
-      <p>Para ejercer cualquiera de estos derechos, contáctanos a <a href="mailto:contacto@novanexus.cl">contacto@novanexus.cl</a>. Responderemos a tu solicitud en un plazo máximo de 30 días hábiles.</p>
+      <p>Para ejercer cualquiera de estos derechos, contáctanos a <a href="mailto:contact@novanexuscapital.com">contact@novanexuscapital.com</a>. Responderemos a tu solicitud en un plazo máximo de 30 días hábiles.</p>
 
       <h2>9. Cookies</h2>
       <p>Nuestro sitio puede utilizar cookies y tecnologías similares para:</p>
@@ -129,7 +129,7 @@
       <h2>10. Contacto</h2>
       <p>Si tienes preguntas sobre esta Política de Privacidad o sobre el tratamiento de tus datos personales, puedes contactarnos:</p>
       <ul>
-        <li><strong>Email:</strong> <a href="mailto:contacto@novanexus.cl">contacto@novanexus.cl</a></li>
+        <li><strong>Email:</strong> <a href="mailto:contact@novanexuscapital.com">contact@novanexuscapital.com</a></li>
         <li><strong>Ubicación:</strong> Santiago, Chile</li>
       </ul>
 
