--- a/terms.html
+++ b/terms.html
@@ -105,7 +105,7 @@
       <h2>9. Contacto</h2>
       <p>Si tienes preguntas sobre estos Términos de Servicio, puedes contactarnos:</p>
       <ul>
-        <li><strong>Email:</strong> <a href="mailto:contacto@novanexus.cl">contacto@novanexus.cl</a></li>
+        <li><strong>Email:</strong> <a href="mailto:contact@novanexuscapital.com">contact@novanexuscapital.com</a></li>
         <li><strong>Ubicación:</strong> Santiago, Chile</li>
       </ul>
 
