--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <link rel="canonical" href="https://nova-nexus-displace-agencys-projects.vercel.app/">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 
