--- a/privacy.html
+++ b/privacy.html
@@ -11,7 +11,7 @@
   <link rel="canonical" href="https://nova-nexus-displace-agencys-projects.vercel.app/privacy.html">
 
   <!-- Favicon -->
-  <link rel="icon" type="image/svg+xml" href="images/logo.svg">
+  <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192.png">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32.png">
   <link rel="apple-touch-icon" sizes="180x180" href="images/apple-touch-icon.png">
 
