--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Nova Nexus">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#0F112A">
-  <link rel="canonical" href="https://nova-nexus-displace-agencys-projects.vercel.app/contact.html">
+  <link rel="canonical" href="https://novanexuscapital.com/contact.html">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192.png">
@@ -20,8 +20,8 @@
   <meta property="og:site_name" content="Nova Nexus">
   <meta property="og:title" content="Contacto — Nova Nexus | Agenda una Consulta">
   <meta property="og:description" content="Agenda una conversación sin compromiso con Nova Nexus. Descubre cómo podemos conectar tu industria con la mejor tecnología global.">
-  <meta property="og:url" content="https://nova-nexus-displace-agencys-projects.vercel.app/contact.html">
-  <meta property="og:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta property="og:url" content="https://novanexuscapital.com/contact.html">
+  <meta property="og:image" content="https://novanexuscapital.com/images/hero-nexus.png">
   <meta property="og:image:width" content="1034">
   <meta property="og:image:height" content="858">
   <meta property="og:locale" content="es_CL">
@@ -30,13 +30,34 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Contacto — Nova Nexus | Agenda una Consulta">
   <meta name="twitter:description" content="Agenda una conversación sin compromiso. Descubre cómo conectar tu industria con la mejor tecnología global.">
-  <meta name="twitter:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta name="twitter:image" content="https://novanexuscapital.com/images/hero-nexus.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500;600;700&family=Inter:wght@400;500&family=Roboto+Mono:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ContactPage",
+    "name": "Contacto — Nova Nexus",
+    "url": "https://novanexuscapital.com/contact.html",
+    "mainEntity": {
+      "@type": "Organization",
+      "name": "Nova Nexus",
+      "url": "https://novanexuscapital.com",
+      "email": "contact@novanexuscapital.com",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Santiago",
+        "addressCountry": "CL"
+      }
+    }
+  }
+  </script>
 </head>
 <body>
   <div class="page-transition" aria-hidden="true"></div>
