--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Nova Nexus">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#2B40F5">
-  <link rel="canonical" href="https://nova-nexus-displace-agencys-projects.vercel.app/">
+  <link rel="canonical" href="https://novanexuscapital.com/">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192.png">
@@ -21,8 +21,8 @@
   <meta property="og:site_name" content="Nova Nexus">
   <meta property="og:title" content="Nova Nexus — Facilitamos la Adopción de Tecnología de Clase Mundial">
   <meta property="og:description" content="Facilitamos la adopción de tecnología de clase mundial en industrias estratégicas. Consultoría tecnológica con acompañamiento cercano.">
-  <meta property="og:url" content="https://nova-nexus-displace-agencys-projects.vercel.app/">
-  <meta property="og:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta property="og:url" content="https://novanexuscapital.com/">
+  <meta property="og:image" content="https://novanexuscapital.com/images/hero-nexus.png">
   <meta property="og:image:width" content="1034">
   <meta property="og:image:height" content="858">
   <meta property="og:locale" content="es_CL">
@@ -31,13 +31,35 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Nova Nexus — Facilitamos la Adopción de Tecnología de Clase Mundial">
   <meta name="twitter:description" content="Facilitamos la adopción de tecnología de clase mundial en industrias estratégicas.">
-  <meta name="twitter:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta name="twitter:image" content="https://novanexuscapital.com/images/hero-nexus.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Albert+Sans:wght@400;500;600;700&family=Inter:wght@400;500&family=Roboto+Mono:wght@400&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
+
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "Nova Nexus",
+    "url": "https://novanexuscapital.com",
+    "logo": "https://novanexuscapital.com/images/logo.svg",
+    "description": "Facilitamos la adopción de tecnología de clase mundial en industrias estratégicas.",
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Santiago",
+      "addressCountry": "CL"
+    },
+    "contactPoint": {
+      "@type": "ContactPoint",
+      "email": "contact@novanexuscapital.com",
+      "contactType": "sales"
+    }
+  }
+  </script>
 </head>
 <body>
   <div class="page-transition" aria-hidden="true"></div>
