--- a/terms.html
+++ b/terms.html
@@ -8,7 +8,7 @@
   <meta name="author" content="Nova Nexus">
   <meta name="robots" content="index, follow">
   <meta name="theme-color" content="#0F112A">
-  <link rel="canonical" href="https://nova-nexus-displace-agencys-projects.vercel.app/terms.html">
+  <link rel="canonical" href="https://novanexuscapital.com/terms.html">
 
   <!-- Favicon -->
   <link rel="icon" type="image/png" sizes="192x192" href="images/favicon-192.png">
@@ -20,8 +20,8 @@
   <meta property="og:site_name" content="Nova Nexus">
   <meta property="og:title" content="Términos de Servicio — Nova Nexus">
   <meta property="og:description" content="Términos y condiciones de uso del sitio web de Nova Nexus.">
-  <meta property="og:url" content="https://nova-nexus-displace-agencys-projects.vercel.app/terms.html">
-  <meta property="og:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta property="og:url" content="https://novanexuscapital.com/terms.html">
+  <meta property="og:image" content="https://novanexuscapital.com/images/hero-nexus.png">
   <meta property="og:image:width" content="1034">
   <meta property="og:image:height" content="858">
   <meta property="og:locale" content="es_CL">
@@ -30,7 +30,7 @@
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:title" content="Términos de Servicio — Nova Nexus">
   <meta name="twitter:description" content="Términos y condiciones de uso del sitio web de Nova Nexus.">
-  <meta name="twitter:image" content="https://nova-nexus-displace-agencys-projects.vercel.app/images/hero-nexus.png">
+  <meta name="twitter:image" content="https://novanexuscapital.com/images/hero-nexus.png">
 
   <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
