Rename images with descriptive names, add alt text, delete unused assets

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
             <span class="tech-stack__label">Oscilar</span>
           </div>
           <div class="tech-stack__logo">
-            <img src="images/Logo_249x87.png" alt="Oscilar">
+            <img src="images/logo-oscilar.png" alt="Oscilar">
           </div>
         </div>
         <div class="tech-stack__item">
@@ -187,14 +187,14 @@
       <div class="services__bento">
         <div class="services__bento-top">
           <div class="bento-card-2col">
-            <img class="bento-card-2col__image" src="images/6pFh1kCjmUdQEOeybBa2kJv70_png_277x204.png" alt="">
+            <img class="bento-card-2col__image" src="images/icon-research.png" alt="Investigación y curación tecnológica">
             <div class="bento-card-2col__text">
               <h3 class="bento-card-2col__title">Investigación y Curación Tecnológica</h3>
               <p class="bento-card-2col__desc">Identificamos y evaluamos las soluciones que mejor se adaptan a las necesidades de tu industria. Te entregamos una recomendación clara, lista para avanzar.</p>
             </div>
           </div>
           <div class="bento-card-2col">
-            <img class="bento-card-2col__image" src="images/x7hratoT3nPTpBxI5IcFStJUlA_png_277x204.png" alt="">
+            <img class="bento-card-2col__image" src="images/icon-industry.png" alt="Conocimiento profundo de industria">
             <div class="bento-card-2col__text">
               <h3 class="bento-card-2col__title">Conocimiento Profundo de Industria</h3>
               <p class="bento-card-2col__desc">Comprendemos los desafíos específicos de cada sector para recomendar tecnología con impacto real.</p>
@@ -203,21 +203,21 @@
         </div>
         <div class="services__bento-bottom">
           <div class="bento-card-3col">
-            <img class="bento-card-3col__image" src="images/p0hfm5aXPR7CvS0VFe8i8hfb0_png_190x140.png" alt="">
+            <img class="bento-card-3col__image" src="images/icon-communication.png" alt="Comunicación directa y en tu idioma">
             <div>
               <h3 class="bento-card-3col__title">Comunicación Directa y en tu Idioma</h3>
               <p class="bento-card-3col__desc">Eliminamos las barreras de comunicación con proveedores internacionales. Somos tu punto de contacto local.</p>
             </div>
           </div>
           <div class="bento-card-3col">
-            <img class="bento-card-3col__image" src="images/ChyEvJEa3m50IQ7wef8CzTbri4_png_190x140.png" alt="">
+            <img class="bento-card-3col__image" src="images/icon-support.png" alt="Acompañamiento de principio a fin">
             <div>
               <h3 class="bento-card-3col__title">Acompañamiento de Principio a Fin</h3>
               <p class="bento-card-3col__desc">Desde la evaluación inicial hasta la puesta en marcha y el soporte continuo.</p>
             </div>
           </div>
           <div class="bento-card-3col">
-            <img class="bento-card-3col__image" src="images/bSeTRBZpvbznzCGwEHBoRIkeJec_png_190x140.png" alt="">
+            <img class="bento-card-3col__image" src="images/icon-global-tech.png" alt="Acceso a tecnología de clase mundial">
             <div>
               <h3 class="bento-card-3col__title">Acceso a Tecnología de Clase Mundial</h3>
               <p class="bento-card-3col__desc">Conectamos a nuestros clientes con soluciones validadas internacionalmente y respaldadas por los principales actores de la industria.</p>
@@ -242,7 +242,7 @@
           <div class="approach__card-text">
             <div class="approach__card-top">
               <div class="approach__card-logo">
-                <img src="images/cKWxePeq3jR2Saj0Xn8To9npdU_png_110x27.png" alt="Oscilar">
+                <img src="images/logo-oscilar-sm.png" alt="Oscilar">
               </div>
               <span class="approach__card-year">/ Partner Estratégico</span>
             </div>
@@ -299,7 +299,7 @@
           </div>
         </div>
         <div class="approach__card-right">
-          <img src="images/Image_618x601.png" alt="Oscilar visualization">
+          <img src="images/oscilar-platform.png" alt="Plataforma Oscilar — gestión de riesgo inteligente">
         </div>
       </div>
     </div>
